--- a/blog-3.html
+++ b/blog-3.html
@@ -105,153 +105,151 @@
         </div>
       </div>
     </nav>
-      <!-- BLOGS -->
-      <section class="blog">
-        <div class="container">
-            <h1>
-                Making English Vietnam's second language: A challenging but necessary
-                task
-            </h1>
-            <span><em> 17/08/2024</em></span>
-            <span>
-                <a
-                    href=" https://vietnamnet.vn/en/making-english-vietnam-s-second-language-a-challenging-but-necessary-task-2312817.html">
-                    https://vietnamnet.vn/en/making-english-vietnam-s-second-language-a-challenging-but-necessary-task-2312817.html</a>
-            </span>
-            <img src="img/img_Sune/news/blogs/blog3-1.avif" alt="blog-3" />
-            <span class="picture-cap">The Politburo urges all levels to focus on enhancing the foreign
-                language proficiency of students, gradually making English the second
-                language in schools. (Illustrative photo)</span>
-            <h2>
-                Experts agree that gradually establishing English as the second
-                language in Vietnamese schools is a challenging yet essential step
-                that the country must take.
-            </h2>
-            <p>
-                In Conclusion No. 91, regarding the continued implementation of
-                Resolution 29 of 2013 by the Party Central Committee on "fundamental
-                and comprehensive reform of education and training, meeting the
-                requirements of industrialization and modernization in the context of
-                a socialist-oriented market economy and international integration,"
-                the Politburo emphasized the need to enhance students' foreign
-                language proficiency, aiming to gradually make English the second
-                language in schools. Professor Nguyen Minh Thuyet, former Deputy
-                Chairman of the National Assembly's Committee on Culture, Education,
-                Youth, and Children, acknowledges the difficulty of this task but
-                asserts its inevitability. ​
-            </p>
-            <p>
-                "Nearly a decade ago, some ministry leaders proposed making English
-                Vietnam’s second language, given its status as the global lingua
-                franca and its critical role in international integration. As a member
-                of ASEAN, where English is the common language, Vietnam must
-                eventually adopt English as the second language in schools and, later,
-                nationwide," Thuyet explained.
-            </p>
-            <p>
-                However, Thuyet highlighted that making English the official second
-                language of the country would require constitutional amendments, which
-                are beyond the government's authority. Nonetheless, the government can
-                develop strategies to establish English as the second language in
-                educational institutions. According to Article 11 of the Education
-                Law, the government is responsible for regulating the teaching and
-                learning of foreign languages within schools. One significant
-                challenge in Vietnam is the limited use of English among the general
-                population. Therefore, establishing English as the second language in
-                schools will require a long-term plan with practical, concrete steps.
-            </p>
-            <p>
-                "There are several critical issues to clarify, such as: What defines a
-                second language? What roles does a second language play? For ethnic
-                minority children, how does learning their mother tongue fit in? These
-                questions need to be addressed through legal documents," Thuyet noted.
-                The Prime Minister’s Decision No. 72 from 2014, which governs the
-                teaching and learning of foreign languages in schools, may need to be
-                reviewed and revised to align with Conclusion No. 91 from the
-                Politburo. For instance, the policy could be updated to include
-                teaching certain subjects in English, rather than merely promoting
-                general foreign language education. ​
-            </p>
-
-            <p>
-                Professor Thuyet also suggested that authorities should determine
-                which educational levels or areas of study should first adopt English
-                instruction.
-            </p>
-            <p>
-                "In the short term, we could develop two parallel programs: one
-                teaching all subjects in Vietnamese and another teaching some subjects
-                (such as Math, Science, and Technology) in English, with the rest in
-                Vietnamese. Local authorities can decide which program to implement in
-                their areas. In regions with both programs, students can choose the
-                one that suits them. If a local area doesn’t offer the English-taught
-                program, students should be allowed to attend schools in other areas
-                that do," Thuyet proposed. "Even in mountainous areas, some schools
-                could begin teaching certain subjects in English. While remote regions
-                may not be able to implement this immediately, a gradual, well-planned
-                rollout is necessary. We cannot remain stagnant under the guise of
-                ‘gradual implementation’ without making actual progress." Thuyet also
-                emphasized the need for clear regulations on assessing and evaluating
-                the effectiveness of English language teaching and learning.
-            </p>
-            <h2>An uphill task ​</h2>
-            <p>
-                Ha Anh Phuong, an English teacher at Huong Can High School in Thanh
-                Son District, Phu Tho Province, agrees that making English the second
-                language is a necessary but challenging goal that must be pursued
-                gradually.
-            </p>
-            <p>
-                "In the current context, it will take time to establish English as a
-                second language," Phuong noted. As an English teacher in a mountainous
-                area, Phuong has seen firsthand the difficulties of making English an
-                elective subject in the high school graduation exam. In many
-                provinces, English is not even a mandatory subject for entrance exams.
-            </p>
-            <p>
-                "With the mindset of only studying what is tested, students,
-                especially those in mountainous areas, often neglect English if it’s
-                not on the exam. This lack of interest and motivation hinders efforts
-                to establish English as a second language, widening the gap between
-                urban and rural areas in terms of foreign language proficiency,"
-                Phuong observed.
-            </p>
-            <p>
-                To gradually make English the second language in schools, Phuong
-                believes that local authorities must foster a strong learning
-                environment, change assessment methods, and incorporate English into
-                entrance exams. Revising how English is tested and evaluated will
-                naturally influence how it is taught and learned. ​
-            </p>
-
-            <p>
-                Phuong also advocates for exam structures that focus more on practical
-                English skills rather than just language knowledge. This approach will
-                help students develop real-world language abilities rather than merely
-                passing tests without being able to effectively communicate in
-                English. ​
-            </p>
-            <p>
-                Moreover, Phuong suggests that schools should create language-learning
-                environments that connect students with local culture. For example,
-                she often engages her students in projects like “I am Muong
-                Ethnicity,” where they produce bilingual content to preserve and
-                promote Muong culture. This includes creating Spotify playlists and
-                radio programs in both Vietnamese and English and connecting with
-                international friends to share Muong culture globally. Such activities
-                make English learning more relevant and engaging. ​
-            </p>
-            <p>
-                For ethnic minority students, Phuong emphasizes the importance of
-                distinguishing between a "foreign language" and a "second language,"
-                as their mother tongue is typically their first language, followed by
-                Vietnamese, with English as an additional language.
-            </p>
-        </div>
-    </section>
     <main>
-      <!-- BLOGS -->
-
+            <!-- BLOGS -->
+            <div class="blog">
+              <div class="container">
+                  <h1>
+                      Making English Vietnam's second language: A challenging but necessary
+                      task
+                  </h1>
+                  <span><em> 17/08/2024</em></span>
+                  <span>
+                      <a
+                          href=" https://vietnamnet.vn/en/making-english-vietnam-s-second-language-a-challenging-but-necessary-task-2312817.html">
+                          https://vietnamnet.vn/en/making-english-vietnam-s-second-language-a-challenging-but-necessary-task-2312817.html</a>
+                  </span>
+                  <img src="img/img_Sune/news/blogs/blog3-1.avif" alt="blog-3" />
+                  <span class="picture-cap">The Politburo urges all levels to focus on enhancing the foreign
+                      language proficiency of students, gradually making English the second
+                      language in schools. (Illustrative photo)</span>
+                  <h2>
+                      Experts agree that gradually establishing English as the second
+                      language in Vietnamese schools is a challenging yet essential step
+                      that the country must take.
+                  </h2>
+                  <p>
+                      In Conclusion No. 91, regarding the continued implementation of
+                      Resolution 29 of 2013 by the Party Central Committee on "fundamental
+                      and comprehensive reform of education and training, meeting the
+                      requirements of industrialization and modernization in the context of
+                      a socialist-oriented market economy and international integration,"
+                      the Politburo emphasized the need to enhance students' foreign
+                      language proficiency, aiming to gradually make English the second
+                      language in schools. Professor Nguyen Minh Thuyet, former Deputy
+                      Chairman of the National Assembly's Committee on Culture, Education,
+                      Youth, and Children, acknowledges the difficulty of this task but
+                      asserts its inevitability. ​
+                  </p>
+                  <p>
+                      "Nearly a decade ago, some ministry leaders proposed making English
+                      Vietnam’s second language, given its status as the global lingua
+                      franca and its critical role in international integration. As a member
+                      of ASEAN, where English is the common language, Vietnam must
+                      eventually adopt English as the second language in schools and, later,
+                      nationwide," Thuyet explained.
+                  </p>
+                  <p>
+                      However, Thuyet highlighted that making English the official second
+                      language of the country would require constitutional amendments, which
+                      are beyond the government's authority. Nonetheless, the government can
+                      develop strategies to establish English as the second language in
+                      educational institutions. According to Article 11 of the Education
+                      Law, the government is responsible for regulating the teaching and
+                      learning of foreign languages within schools. One significant
+                      challenge in Vietnam is the limited use of English among the general
+                      population. Therefore, establishing English as the second language in
+                      schools will require a long-term plan with practical, concrete steps.
+                  </p>
+                  <p>
+                      "There are several critical issues to clarify, such as: What defines a
+                      second language? What roles does a second language play? For ethnic
+                      minority children, how does learning their mother tongue fit in? These
+                      questions need to be addressed through legal documents," Thuyet noted.
+                      The Prime Minister’s Decision No. 72 from 2014, which governs the
+                      teaching and learning of foreign languages in schools, may need to be
+                      reviewed and revised to align with Conclusion No. 91 from the
+                      Politburo. For instance, the policy could be updated to include
+                      teaching certain subjects in English, rather than merely promoting
+                      general foreign language education. ​
+                  </p>
+      
+                  <p>
+                      Professor Thuyet also suggested that authorities should determine
+                      which educational levels or areas of study should first adopt English
+                      instruction.
+                  </p>
+                  <p>
+                      "In the short term, we could develop two parallel programs: one
+                      teaching all subjects in Vietnamese and another teaching some subjects
+                      (such as Math, Science, and Technology) in English, with the rest in
+                      Vietnamese. Local authorities can decide which program to implement in
+                      their areas. In regions with both programs, students can choose the
+                      one that suits them. If a local area doesn’t offer the English-taught
+                      program, students should be allowed to attend schools in other areas
+                      that do," Thuyet proposed. "Even in mountainous areas, some schools
+                      could begin teaching certain subjects in English. While remote regions
+                      may not be able to implement this immediately, a gradual, well-planned
+                      rollout is necessary. We cannot remain stagnant under the guise of
+                      ‘gradual implementation’ without making actual progress." Thuyet also
+                      emphasized the need for clear regulations on assessing and evaluating
+                      the effectiveness of English language teaching and learning.
+                  </p>
+                  <h2>An uphill task ​</h2>
+                  <p>
+                      Ha Anh Phuong, an English teacher at Huong Can High School in Thanh
+                      Son District, Phu Tho Province, agrees that making English the second
+                      language is a necessary but challenging goal that must be pursued
+                      gradually.
+                  </p>
+                  <p>
+                      "In the current context, it will take time to establish English as a
+                      second language," Phuong noted. As an English teacher in a mountainous
+                      area, Phuong has seen firsthand the difficulties of making English an
+                      elective subject in the high school graduation exam. In many
+                      provinces, English is not even a mandatory subject for entrance exams.
+                  </p>
+                  <p>
+                      "With the mindset of only studying what is tested, students,
+                      especially those in mountainous areas, often neglect English if it’s
+                      not on the exam. This lack of interest and motivation hinders efforts
+                      to establish English as a second language, widening the gap between
+                      urban and rural areas in terms of foreign language proficiency,"
+                      Phuong observed.
+                  </p>
+                  <p>
+                      To gradually make English the second language in schools, Phuong
+                      believes that local authorities must foster a strong learning
+                      environment, change assessment methods, and incorporate English into
+                      entrance exams. Revising how English is tested and evaluated will
+                      naturally influence how it is taught and learned. ​
+                  </p>
+      
+                  <p>
+                      Phuong also advocates for exam structures that focus more on practical
+                      English skills rather than just language knowledge. This approach will
+                      help students develop real-world language abilities rather than merely
+                      passing tests without being able to effectively communicate in
+                      English. ​
+                  </p>
+                  <p>
+                      Moreover, Phuong suggests that schools should create language-learning
+                      environments that connect students with local culture. For example,
+                      she often engages her students in projects like “I am Muong
+                      Ethnicity,” where they produce bilingual content to preserve and
+                      promote Muong culture. This includes creating Spotify playlists and
+                      radio programs in both Vietnamese and English and connecting with
+                      international friends to share Muong culture globally. Such activities
+                      make English learning more relevant and engaging. ​
+                  </p>
+                  <p>
+                      For ethnic minority students, Phuong emphasizes the importance of
+                      distinguishing between a "foreign language" and a "second language,"
+                      as their mother tongue is typically their first language, followed by
+                      Vietnamese, with English as an additional language.
+                  </p>
+              </div>
+            </div>
 <!-- ACTION CALL -->
 <div class="py-vh-6 bg-gray-900 text-light w-100 overflow-hidden" id="workwithus">
   <div class="container">
