lang -html - news - index_vn

--- a/index_vn.html
+++ b/index_vn.html
@@ -144,7 +144,7 @@
             <h2 class="display-6">"Mở rộng tầm nhìn - Trao quyền tương lai"</h2>
           </div>
         </div>
-        <div class="row d-flex align-items-center value">
+        <div class="row d-flex align-items-center value overflow-hidden">
           <div class="col-1 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <span class="h5 fw-lighter">01.</span>
             <h3 class="py-5 border-top border-dark"><span style="color: #ffbc2c;">S</span> - Supportive</h3>
@@ -163,7 +163,7 @@
             <p>Trau dồi kiến ​​thức, kỹ năng và phát triển bản thân giúp các cá nhân đóng góp ý nghĩa cho xã hội. SunEd làm vai trò quan trọng trong việc thúc đẩy phát triển cộng đồng, thúc đẩy học tập suốt đời và trang bị cho người học khả năng đáp ứng yêu cầu hay thay đổi của lực lượng lao động và trách nhiệm công dân.</p>
           </div>
         </div>
-        <div class="row d-flex align-items-center value">
+        <div class="row d-flex align-items-center value overflow-hidden">
           <div class="col-1 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <span class="h5 fw-lighter">04.</span>
             <h3 class="py-5 border-top border-dark"><span style="color: #3c4493;">E</span> - Efficient</h3>
@@ -230,7 +230,7 @@
             <h3 class="py-5 border-top border-dark" data-aos="fade-right">Tin tức</h3>
           </div>
           <div class="col-12">
-            <div class="row py-vh-5 d-flex align-items-center news-content" style="text-align: center;">
+            <div class="row py-vh-5 d-flex align-items-center news-content overflow-hidden" style="text-align: center;">
               <div class="col-md-4" data-aos="fade-up">
                 <img src="img/img_Sune/news/blogs/blog1-1.avif" class="img-fluid rounded shadow" alt="nice gallery image">
                 <a href="">Ngành giáo dục tập trung cải cách, đổi mới sáng tạo cho năm học tới</a>
@@ -292,7 +292,7 @@
                       </div>
                       <div class="mb-3">
                           <label class="form-label">Tin nhắn</label>
-                          <textarea class="form-control" rows="3">Nhập tin nhắn vào đây</textarea>
+                          <textarea class="form-control" rows="3">Nội dung tin nhắn</textarea>
                       </div>
                       <button type="submit" class="btn btn-custom w-100">Gửi</button>
                   </form>
