--- a/news_vn.html
+++ b/news_vn.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <meta name="author" content="Rei">
     <meta name="HandheldFriendly" content="true">
-    <title>SunEd</title>
-    <link rel="stylesheet" href="css/theme.min.css">
+    <title>SunEd | News</title>
+    <link rel="stylesheet" href="/css/theme.min.css">
     <link rel="stylesheet" href="css/news.css">
     <link rel="stylesheet" href="css/custom.css">
-    <!-- ggtag tracking -->
+    <!-- gg tag tracking -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-X6M0JGJ7RW"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -36,6 +36,7 @@
             font-weight: normal;
             font-style: normal;
         }
+
         /* inter-300 - latin */
         @font-face {
             font-family: 'Inter';
@@ -79,7 +80,7 @@
     <!-- navbar -->
     <nav id="navScroll" class="navbar navbar-expand-lg navbar-light fixed-top" tabindex="0">
         <div class="container">
-            <a class="navbar-brand pe-4 fs-4" href="index.html">
+            <a class="navbar-brand pe-4 fs-4" href="/index_vn.html">
                 <img src="/img/img_Sune/index/logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -90,28 +91,28 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="/index.html" aria-label="Brings you to the frontpage">
-                            Home
+                        <a class="nav-link" href="/index_vn.html" aria-label="Brings you to the frontpage">
+                            Trang chủ
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#aboutus">
-                            About us
+                        <a class="nav-link" href="/aboutus_vn.html">
+                            Giới thiệu
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#numbers">
-                            Contact
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/news.html">
-                            News
+                        <a class="nav-link" href="/contact_vn.html">
+                            Liên hệ
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/news_vn.html">
-                            VN
+                            Tin tức
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/news.html">
+                            EN
                         </a>
                     </li>
                 </ul>
@@ -128,9 +129,10 @@
                 </div>
                 <div class="row">
                     <div class="col col-lg-7 py-vh-6 position-relative" data-aos="fade-right">
-                        <h2 class="display-1 fw-bold mt-5">News</h2>
-                        <a href="#" class="btn btn-dark btn-xl me-3 my-1"><i class="fa-solid fa-envelope overflow-hidden"
-                                style="padding-right: 0.3rem;"></i>Contact us</a>
+                        <h2 class="display-1 fw-bold mt-5">Tin Tức</h2>
+                        <a href="#" class="btn btn-dark btn-xl me-3 my-1"><i
+                                class="fa-solid fa-envelope overflow-hidden" style="padding-right: 0.3rem;"></i>Liên
+                            hệ</a>
                     </div>
                 </div>
             </div>
@@ -145,44 +147,46 @@
                                 style="color: #ffbc2c;">Sun</span><span style="color: #3c4493;">Ed</span></h1>
                     </div>
                     <div class="col-lg-8" data-aos="fade-left">
-                        <h2 class="display-6">"Expanding Horizons - Empowering Futures"</h2>
+                        <h2 class="display-6">"Thêm Kiến thức - Vững Tương lai"</h2>
                     </div>
                 </div>
-                <div class="row d-flex align-items-center news" >
+                <div class="row d-flex align-items-center news">
                     <div class="col-md-6 col-lg-4 pb-0 blog-col" data-aos="fade-up" data-aos-delay="200">
                         <span class="h5 fw-lighter">01.</span>
                         <img src="/img/img_Sune/news/blogs/blog1-1.avif" alt="">
-                        <a href="/blog-1.html">Education sector focuses on reform and innovation for the upcoming
-                            academic year</a>
+                        <a href="/Blog_vn/blog-1.html">Ngành giáo dục tập trung cải cách, đổi mới sáng tạo cho năm học
+                            tới</a>
                     </div>
                     <div class="col-md-6 col-lg-4 pb-0 blog-col" data-aos="fade-up" data-aos-delay="400">
                         <span class="h5 fw-lighter">02.</span>
                         <img src="/img/img_Sune/news/blogs/blog2-1.png" alt="">
-                        <a href="/blog-2.html">Summary of the 2023-2024 school year for secondary education and
-                            continuing education</a>
+                        <a href="/Blog_vn/blog-2.html">Tóm tắt năm học 2023-2024 đối với giáo dục trung học và giáo dục
+                            thường xuyên</a>
                     </div>
                     <div class="col-md-6 col-lg-4 pb-0 blog-col" data-aos="fade-up" data-aos-delay="600">
                         <span class="h5 fw-lighter">03.</span>
                         <img src="/img/img_Sune/news/blogs/blog3-1.avif" alt="">
-                        <a href="/blog-3.html">Making English Vietnam's second language: A challenging but necessary task
+                        <a href="/Blog_vn/blog-3.html">Đưa tiếng Anh trở thành ngôn ngữ thứ hai của Việt Nam: Một nhiệm
+                            vụ đầy thách thức nhưng cần thiết
                         </a>
                     </div>
                 </div>
-                <div class="row d-flex align-items-center news" >
+                <div class="row d-flex align-items-center news">
                     <div class="col-md-6 col-lg-4 pb-1 blog-col" data-aos="fade-up" data-aos-delay="200">
                         <span class="h5 fw-lighter">04.</span>
-                        <img src="/img/img_Sune/news/blogs/blog 4.avif" alt="" >
-                        <a href="/blog-4.html">Việt Nam welcomes 22,000 international students for this academic year</a>
+                        <img src="/img/img_Sune/news/blogs/blog 4.avif" alt="">
+                        <a href="/Blog_vn/blog-4.html">Việt Nam chào đón 22.000 sinh viên quốc tế trong năm học này</a>
                     </div>
                     <div class="col-md-6 col-lg-4 pb-1 blog-col" data-aos="fade-up" data-aos-delay="400">
                         <span class="h5 fw-lighter">05.</span>
-                        <img src="/img/img_Sune/news/blogs/blog-5.avif" alt="" >
-                        <a href="/blog-5.html">Vietnam embraces chance to become international student hub </a>
+                        <img src="/img/img_Sune/news/blogs/blog-5.avif" alt="">
+                        <a href="/Blog_vn/blog-5.html">Việt Nam nắm bắt cơ hội trở thành trung tâm sinh viên quốc tế</a>
                     </div>
                     <div class="col-md-6 col-lg-4 pb-0 blog-col" data-aos="fade-up" data-aos-delay="600">
                         <span class="h5 fw-lighter">06.</span>
                         <img src="/img/img_Sune/news/blogs/bblog-6.avif" alt="">
-                        <a href="/blog-6.html">Roadmap needed to make English the second language in schools
+                        <a href="/Blog_vn/blog-6.html">Cần có lộ trình để đưa tiếng Anh trở thành ngôn ngữ thứ hai trong
+                            trường học
                         </a>
                     </div>
                 </div>
@@ -195,12 +199,11 @@
                 <div class="row d-flex justify-content-center">
                     <div class="row d-flex justify-content-center text-center">
                         <div class="col-lg-8 text-center" data-aos="fade">
-                            <h2 class="display-6 mb-3">Ready to expand your horizons?</h2>
+                            <h2 class="display-6 mb-3">Bạn đã sẵn sàng mở đón bầu trời kiến thức cho mình?</h2>
                         </div>
                         <div class="col-12">
                             <a href="#" class="btn btn-xl shadow me-3 mt-2"
-                                style="background-color:#ffbc2c;border-radius: 10px;" data-aos="fade-down">Contact
-                                Us</a>
+                                style="background-color:#ffbc2c;border-radius: 10px;" data-aos="fade-down">Liên hệ</a>
                         </div>
                     </div>
                 </div>
@@ -211,22 +214,23 @@
             <div class="container">
                 <div class="row">
                     <div class="col-6 contact-left">
-                        <div class="text-center">
-                            <h2 data-aos="fade-right" data-aos-delay="200">Ready to expand your horizons?</h2>
-                            <img src="img/img_Sune/index/contact-img.avif" alt="Kite Image" class="shadow"
+                        <div class="text-center overflow-hidden">
+                            <h2 data-aos="fade-right" data-aos-delay="200" class="overflow-hidden">Bạn đã sẵn sàng mở đón bầu trời kiến thức cho
+                                mình?</h2>
+                            <img src="img/img_Sune/index/contact-img.avif" alt="Kite Image" class="shadow overflow-hidden"
                                 data-aos="fade-up" data-aos-delay="500">
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="contact-right">
-                            <h3 data-aos="fade-left" data-aos-delay="200">Contact us</h3>
+                            <h3 data-aos="fade-left" data-aos-delay="200">Liên hệ</h3>
                             <form data-aos="fade-left" data-aos-delay="500">
                                 <div class="mb-3">
-                                    <label class="form-label">First Name *</label>
+                                    <label class="form-label">Tên *</label>
                                     <input type="text" class="form-control" required="">
                                 </div>
                                 <div class="mb-3">
-                                    <label class="form-label">Last Name *</label>
+                                    <label class="form-label">Họ *</label>
                                     <input type="text" class="form-control" required="">
                                 </div>
                                 <div class="mb-3">
@@ -234,10 +238,10 @@
                                     <input type="email" class="form-control" required="">
                                 </div>
                                 <div class="mb-3">
-                                    <label class="form-label">Message</label>
-                                    <textarea class="form-control" rows="3">This is a message</textarea>
+                                    <label class="form-label">Tin nhắn</label>
+                                    <textarea class="form-control" rows="3">Nội dung tin nhắn</textarea>
                                 </div>
-                                <button type="submit" class="btn btn-custom w-100">Send</button>
+                                <button type="submit" class="btn btn-custom w-100">Gửi</button>
                             </form>
                         </div>
                     </div>
@@ -249,38 +253,41 @@
     <footer>
         <div class="container small border-top">
             <div class="row py-5 d-flex justify-content-between">
+
                 <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
                     <img src="/img/img_Sune/index/logo.png" alt="Company Logo" style="width: 8rem;">
                 </div>
                 <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
-                    <h3 class="h6 mb-3">HEAD OFFICE</h3>
+                    <h3 class="h6 mb-3 overflow-hidden">
+                        VĂN PHÒNG CHÍNH</h3>
                     <address class="text-secondary mt-3">
-                        478 Nguyen Tat Thanh Street, Ward 18,District 4, Ho Chi Minh City, Viet Nam.<br><br>
+                        478 Nguyễn Tất Thành, Phường 18, Quận 4, Ho Chi Minh City, Viet Nam.<br><br>
                         <a href="">+84 779 661 879</a><br><br>
                         <a href="">info@suned.edu.vn</a>
                     </address>
                 </div>
                 <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
-                    <h3 class="h6 mb-3">
-                        NAVIGATION
+                    <h3 class="h6 mb-3 overflow-hidden">
+                        ĐIỀU HƯỚNG
                     </h3>
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link link-secondary ps-0" aria-current="page" href="#">Home</a>
+                            <a class="nav-link link-secondary ps-0" aria-current="page" href="/index_vn.html">Trang
+                                chủ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link link-secondary ps-0" href="#">About Us</a>
+                            <a class="nav-link link-secondary ps-0" href="/aboutus_vn.html">Giới thiệu</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link link-secondary ps-0" href="#">News</a>
+                            <a class="nav-link link-secondary ps-0" href="/news-vn.html">Tin tức</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link link-secondary ps-0" href="#">Contact</a>
+                            <a class="nav-link link-secondary ps-0" href="/contact_vn.html">Liên hệ</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-12 col-lg-6 col-xl-3 p-5">
-                    <h3 class="h6 mb-3">FOLLOW US</h3>
+                    <h3 class="h6 mb-3 overflow-hidden">Kênh truyền thông</h3>
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link link-secondary ps-0" aria-current="page" href="register.html">Zalo</a>
@@ -291,7 +298,6 @@
                 </div>
             </div>
         </div>
-
         <div class="container text-center py-3 small">© 2024 by <a href="https://www.suned.edu.vn/" class="link-fancy"
                 target="_blank">SunEd</a>
         </div>
