chỉnh slogan -index. html vn

--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@
           <h3 class="h6 mb-3">FOLLOW US</h3>
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link link-secondary ps-0" aria-current="page" href="register.html">Zalo</a>
-              <a class="nav-link link-secondary ps-0" aria-current="page" href="content.html">Facebook</a>
-              <a class="nav-link link-secondary ps-0" aria-current="page" href="content.html">X</a>
+              <a class="nav-link link-secondary ps-0" aria-current="page" href="#">Zalo</a>
+              <a class="nav-link link-secondary ps-0" aria-current="page" href="#">Facebook</a>
+              <a class="nav-link link-secondary ps-0" aria-current="page" href="#">X</a>
             </li>
           </ul>
         </div>
