--- a/index_vn.html
+++ b/index_vn.html
@@ -125,8 +125,7 @@
         <div class="row">
           <div class="col col-lg-7 py-vh-6 position-relative" data-aos="fade-right">
             <h1 class="display-1 fw-bold mt-5 overflow-hidden"><span style="color:#ffbc2c;">Sun</span><span style="color: #3c4493;">Ed</span></h1>
-            <p class="lead">Thêm Kiến thức
-              - Vững Tương lai</p>
+            <p class="lead">Thêm Kiến thức - Vững Tương lai</p>
             <a href="#" class="btn btn-dark btn-xl me-3 my-1"><i class="fa-solid fa-envelope overflow-hidden" style="padding-right: 0.3rem;"></i>Liên hệ</a>
           </div>
         </div>
@@ -141,7 +140,7 @@
             <h1 class="display-6" style="font-family: hanzel,serif;"><span style="color: #ffbc2c;">Sun</span><span style="color: #3c4493;">Ed</span></h1>
           </div>
           <div class="col-lg-8" data-aos="fade-left">
-            <h2 class="display-6">"Mở rộng tầm nhìn - Trao quyền tương lai"</h2>
+            <h2 class="display-6">"Thêm Kiến thức - Vững Tương lai"</h2>
           </div>
         </div>
         <div class="row d-flex align-items-center value overflow-hidden">
