--- a/contact_vn.html
+++ b/contact_vn.html
@@ -122,7 +122,7 @@
   <div class="container">
       <div class="row">
           <div class="col-6 contact-left">
-              <div class="text-center">
+              <div class="text-center overflow-hidden">
                   <h2 data-aos="fade-right" data-aos-delay="200">Nâng tầm cuộc sống của bạn!</h2>
                   <img src="img/img_Sune/contact-1.avif" alt="Building-img" class="shadow" data-aos="fade-up" data-aos-delay="500">
               </div>
