--- a/news_vn.html
+++ b/news_vn.html
@@ -14,8 +14,8 @@
     <meta name="HandheldFriendly" content="true">
     <title>SunEd | News</title>
     <link rel="stylesheet" href="/css/theme.min.css">
-    <link rel="stylesheet" href="css/news.css">
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="/css/news.css">
+    <link rel="stylesheet" href="/css/custom.css">
     <!-- gg tag tracking -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-X6M0JGJ7RW"></script>
     <script>
