--- a/index_vn.html
+++ b/index_vn.html
@@ -232,15 +232,15 @@
             <div class="row py-vh-5 d-flex align-items-center news-content overflow-hidden" style="text-align: center;">
               <div class="col-md-4" data-aos="fade-up">
                 <img src="img/img_Sune/news/blogs/blog1-1.avif" class="img-fluid rounded shadow" alt="nice gallery image">
-                <a href="">Ngành giáo dục tập trung cải cách, đổi mới sáng tạo cho năm học tới</a>
+                <a href="/Blog_vn/blog-1.html">Ngành giáo dục tập trung cải cách, đổi mới sáng tạo cho năm học tới</a>
               </div>
               <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                 <img src="img/img_Sune/news/blogs/blog2-1.png" class="img-fluid rounded shadow" alt="nice gallery image">
-                <a href="">Tóm tắt năm học 2023-2024 đối với giáo dục trung học và giáo dục ...</a>
+                <a href="/Blog_vn/blog-2.html">Tóm tắt năm học 2023-2024 đối với giáo dục trung học và giáo dục ...</a>
               </div>
               <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
                 <img src="img/img_Sune/news/blogs/blog3-1.avif" class="img-fluid rounded shadow" alt="nice gallery image">
-                <a href="">
+                <a href="/Blog_vn/blog-3.html">
                   Đưa tiếng Anh trở thành ngôn ngữ thứ hai của Việt Nam: Một nhiệm vụ đầy thách thức nhưng cần thiết</a>
               </div>
             </div>
