redesign footer-copyright

--- a/aboutus.html
+++ b/aboutus.html
@@ -108,8 +108,8 @@
       <div class="container">
           <div class="row">
               <div class="col-6 left-col">
-                  <h1><span style="color: #fdb92e;" class="animate__animated animate__fadeInUp animate__delay-2s">Sun</span><span class="animate__animated animate__fadeInLeft animate__delay-3s">flower</span></h1>
-                  <h1><span style="color: #3c4493;" class="animate__animated animate__fadeInUp animate__delay-2s">Ed</span><span class="animate__animated animate__fadeInLeft animate__delay-3s">ucation</span></h1>
+                  <h1><span style="color: #fdb92e;" data-aos="flip-left" data-aos-delay="1000" data-aos-easing="ease-in-out">Sun</span><span data-aos="fade-left" data-aos-delay="2000" data-aos-easing="ease-in-out">flower</span></h1>
+                  <h1><span style="color: #3c4493;" data-aos="fade-left" data-aos-delay="1500" data-aos-easing="ease-in-out">Ed</span><span data-aos="fade-left" data-aos-delay="2000" data-aos-easing="ease-in-out">ucation</span></h1>
                   <img src="/img/img_Sune/Aboutus/aboutus-1.avif" alt="perspective">
                   <img src="/img/img_Sune/Aboutus/aboutus-1.avif" alt="perspective" class="img-1">
                   <img src="/img/img_Sune/Aboutus/aboutus-1.avif" alt="perspective" class="img-2">
@@ -257,7 +257,7 @@
     </div>
   </div>
 
-  <div class="container text-center py-3 small">© 2024 by <a href="https://www.suned.edu.vn/"class="link-fancy"
+  <div class="container text-center py-3 small">© 2024 by <a href="https://www.suned.edu.vn/"class="copyright link-fancy"
       target="_blank">SunEd</a>
   </div>
 </footer>
