--- a/blog-2.html
+++ b/blog-2.html
@@ -262,7 +262,7 @@
     </div>
   </div>
 
-  <div class="container text-center py-3 small">© 2024 by <a href="https://www.suned.edu.vn/"class="link-fancy"
+  <div class="container text-center py-3 small">© 2024 by <a href="https://www.suned.edu.vn/"class="copyright link-fancy"
       target="_blank">SunEd</a>
   </div>
 </footer>
