--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
       </div>
     </div>
 
-    <div class="container text-center py-3 small">© 2024 by <a href="https://www.suned.edu.vn/"class="link-fancy"
+    <div class="container text-center py-3 small">© 2024 by <a href="https://www.suned.edu.vn/"class="copyright ink-fancy"
         target="_blank">SunEd</a>
     </div>
   </footer>
