--- a/index_vn.html
+++ b/index_vn.html
@@ -349,9 +349,9 @@
       </div>
     </div>
 
-    <div class="container text-center py-3 small">© 2024 by <a href="https://www.suned.edu.vn/"class="link-fancy"
-        target="_blank">SunEd</a>
-    </div>
+    <div class="container text-center py-3 small">© 2024 by <a href="https://www.suned.edu.vn/"class="copyright ink-fancy"
+      target="_blank">SunEd</a>
+  </div>
   </footer>
 
   <script src="js/bootstrap.bundle.min.js"></script>
