--- a/news.html
+++ b/news.html
@@ -292,8 +292,8 @@
             </div>
         </div>
 
-        <div class="container text-center py-3 small">© 2024 by <a href="https://www.suned.edu.vn/" class="link-fancy"
-                target="_blank">SunEd</a>
+        <div class="container text-center py-3 small">© 2024 by <a href="https://www.suned.edu.vn/"class="copyright ink-fancy"
+            target="_blank">SunEd</a>
         </div>
     </footer>
 
