--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                       </div>
                       <div class="mb-3">
                           <label class="form-label">Message</label>
-                          <textarea class="form-control" rows="3" id="message" name="message"></textarea>>This is a message</textarea>
+                          <textarea class="form-control" rows="3" id="message" name="message">This is a message</textarea>
                       </div>
                       <button type="submit" class="btn btn-custom w-100">Send</button>
                   </form>
