lam chuc nang form

--- a/index.html
+++ b/index.html
@@ -282,7 +282,8 @@
           </div>
           <div class="col-6 contact-right">
                   <h3 data-aos="fade-left" data-aos-delay="200">Contact us</h3>
-                  <form data-aos="fade-left" data-aos-delay="500">
+                  <form data-aos="fade-left" data-aos-delay="500"  action="https://formspree.io/f/myzedevr"
+                  method="POST">
                       <div class="mb-3">
                           <label class="form-label">First Name *</label>
                           <input type="text" class="form-control" id="firstName" name="firstName" required="">
