contact index.vn

--- a/index_vn.html
+++ b/index_vn.html
@@ -276,7 +276,8 @@
           </div>
           <div class="col-6 contact-right">
                   <h3 data-aos="fade-left" data-aos-delay="200">Liên hệ</h3>
-                  <form data-aos="fade-left" data-aos-delay="500">
+                  <form data-aos="fade-left" data-aos-delay="500" action="https://formspree.io/f/myzedevr"
+                  method="POST">
                       <div class="mb-3">
                           <label class="form-label">Tên *</label>
                           <input type="text" class="form-control" required="">
