--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,8 @@
           </div>
           <div class="col-6 contact-right">
                   <h3 data-aos="fade-left" data-aos-delay="200">Contact Form</h3>
-                  <form data-aos="fade-left" data-aos-delay="500">
+                  <form data-aos="fade-left" data-aos-delay="500" action="https://formspree.io/f/myzedevr"
+                  method="POST">
                       <div class="mb-3">
                           <label class="form-label">First Name *</label>
                           <input type="text" class="form-control" required="">
